--- a/build.xml
+++ b/build.xml
@@ -9,13 +9,13 @@
             encoding="UTF-8" failonerror="true" windowtitle="CivCounsel">
 
             <classpath>
-                <pathelement path="war/WEB-INF/lib/gwt-dev.jar"/>
-                <pathelement path="war/WEB-INF/lib/gwt-html5-storage.jar"/>
-                <pathelement path="war/WEB-INF/lib/gwt-incubator-20101117-r1766.jar"/>
-                <pathelement path="war/WEB-INF/lib/gwt-user.jar"/>
+                <pathelement path="lib/gwt-user.jar"/>
+                <pathelement path="lib/gwt-dev.jar"/>
+                <pathelement path="lib/gwt-html5-storage.jar"/>
+                <pathelement path="lib/gwt-incubator-20101117-r1766.jar"/>
             </classpath>
 
-            <link href="http://google-web-toolkit.googlecode.com/svn/javadoc/2.1/"/>
+            <link href="http://google-web-toolkit.googlecode.com/svn/javadoc/2.2/"/>
             <link href="http://hudson.purpleware.org/job/GWT-HTML5-Storage/javadoc/"/>
             <link href="http://java.sun.com/javase/6/docs/api/"/>
             <link href="http://collectionofdemos.appspot.com/javadoc/"/>
