--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-html5-storage.jar">
+	<classpathentry kind="lib" path="lib/gwt-incubator-20101117-r1766.jar"/>
+	<classpathentry kind="lib" path="lib/gwt-html5-storage.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://hudson.purpleware.org/job/GWT-HTML5-Storage/javadoc/"/>
 		</attributes>
