--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
             remotedir="${ftpdir}">
             <fileset dir="war">
         	    <include name="index.html"/>
-                <include name="app.html"/>
+                <include name="app.cache.html"/>
                 <include name="uuid.cache.js"/>
             	<include name=".htaccess"/>
                 <include name="civcounsel/**"/>
@@ -71,7 +71,7 @@
             remotedir="${ftpdir}">
             <fileset dir="war">
                 <include name="index.html"/>
-                <include name="app.html"/>
+                <include name="app.cache.html"/>
                 <include name="uuid.cache.js"/>
                 <include name=".htaccess"/>
                 <include name="civcounsel/**"/>
