Renamed from version.properties to CbVersionIF.properties

--- a/src/com/tj/civ/client/resources/CbVersionIF.properties
+++ b/src/com/tj/civ/client/resources/CbVersionIF.properties
@@ -10,6 +10,6 @@ version=0.5
 # SNAP = development snapshot, RC = release candidate, GA = general availability 
 state=SNAP
 
-# build number see buildNum.properties
+# build number see CbBuildNumberIF.properties
 
 # EOF
