removed the 'state' information split 'version' into 'major' and 'minor' increased minor version to 6

--- a/src/com/tj/civ/client/resources/CbVersionIF.properties
+++ b/src/com/tj/civ/client/resources/CbVersionIF.properties
@@ -3,12 +3,11 @@
 # Creation Date: 2011-05-22
 # CivBuddy version information
 
-# the official version number, maintained manually
-version=0.5
+# the official major version number, maintained manually
+major=0
 
-# the version state, maintained manually
-# SNAP = development snapshot, RC = release candidate, GA = general availability 
-state=SNAP
+# the official minor version number, maintained manually
+minor=6
 
 # build number see CbBuildNumberIF.properties
 
