--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sat Oct 22 14:10:49 CEST 2011
+#Wed Mar 02 21:49:05 CET 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-warSrcDir=
+warSrcDir=war
 warSrcDirIsOutput=true
