--- a/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -3,5 +3,5 @@
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
 # Last modified:
-#Mon, 31 Oct 2011 22:44:18 +0100
-build.number=35
+#Wed Nov 02 00:02:36 CET 2011
+build.number=36
