--- a/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -3,5 +3,5 @@
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
 # Last modified:
-#Wed, 16 Nov 2011 00:09:37 +0100
-build.number=42
+#Mon Nov 21 11:06:41 CET 2011
+build.number=43
