gwt.style, dir.build

--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,12 @@
 # Creation Date: 2011-05-22
 
 
+# Build folder
+dir.build = build
+
+# What the GWT generated JavaScript should be like (OBFUSCATED, PRETTY, or DETAILED)
+gwt.style = OBFUSCATED
+
 # FTP access for deployment
 ftp.user = web1195
 ftp.pwd = f00bar42
