--- a/build.properties
+++ b/build.properties
@@ -20,5 +20,14 @@ ftp.server = web1195.server19.greatnet.de
 buildNumFile = src/com/tj/civ/client/resources/CbBuildNumberIF.properties
 versionFile = src/com/tj/civ/client/resources/CbVersionIF.properties
 
+# Sonar
+sonar.jdbc.username = sonar
+sonar.jdbc.password = sonar
+sonar.jdbc.url = jdbc:postgresql://localhost/sonar
+sonar.jdbc.driverClassName = org.postgresql.Driver
+sonar.jdbc.validationQuery = select 1
+sonar.host.url = http://localhost:9000
+sonar.projectName = CivBuddy
+
 
 # EOF
