--- a/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -3,5 +3,5 @@
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
 # Last modified:
-#Wed Jan 11 00:22:11 CET 2012
-build.number=71
+#Sat Mar 31 16:03:41 CEST 2012
+build.number=76
