--- a/build.properties
+++ b/build.properties
@@ -28,6 +28,7 @@ sonar.jdbc.driverClassName = org.postgresql.Driver
 sonar.jdbc.validationQuery = select 1
 sonar.host.url = http://localhost:9000
 sonar.projectName = CivBuddy
+sonar.profile = TJ
 
 
 # EOF
