--- a/build.xml
+++ b/build.xml
@@ -188,4 +188,23 @@
             <fileset refid="fsCopy" />
         </ftp>
     </target>
+
+
+
+    <target name="sonar" depends="compile.javac" description="Run Sonar analysis">
+
+        <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+            <classpath path="lib/sonar-ant-task-1.3.jar" />
+        </taskdef>
+
+        <property name="sonar.sources" value="../src" />
+        <property name="sonar.binaries" value="bin" />
+        <property name="sonar.libraries" value="../lib/gwt-dev.jar,../lib/gwt-user.jar,
+            ../lib/validation-api-1.0.0.GA.jar,../lib/validation-api-1.0.0.GA-sources.jar" />
+
+        <delete dir="${dir.build}/.sonar" failonerror="false" verbose="true" />
+        <sonar:sonar key="com.thomasjensen:civbuddy" version="${versionBuilt}" xmlns:sonar="antlib:org.sonar.ant"
+            baseDir="${dir.build}" />
+
+    </target>
 </project>
