--- a/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -1,7 +1,8 @@
+#Mon, 30 Apr 2012 23:53:16 +0200
 # $Id$
 # CivBuddy build number, maintained by ant
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
 # Last modified:
 #Sat Mar 31 16:03:41 CEST 2012
-build.number=76
+build.number=77
