--- a/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -1,8 +1,6 @@
-#Mon, 30 Apr 2012 23:53:16 +0200
 # $Id$
 # CivBuddy build number, maintained by ant
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
-# Last modified:
-#Sat Mar 31 16:03:41 CEST 2012
-build.number=77
+# Last modified: Sun, 13 May 2012 15:03:47 +0200
+build.number=79
