Updated with new FTP connection settings

--- a/build.properties
+++ b/build.properties
@@ -10,10 +10,10 @@ dir.build = build
 gwt.style = OBFUSCATED
 
 # FTP access for deployment
-ftp.user = web1195
-ftp.pwd = f00bar42
-ftp.dir = /html/main/software/civbuddy
-ftp.server = web1195.server19.greatnet.de
+ftp.user = civbuddy.org
+ftp.pwd = (orgSecLrg)
+ftp.dir = /civbuddy.org/app
+ftp.server = ftp.strato.com
 
 # Version information
 # must be in resources to have the build number available to the application
