--- a/war/.htaccess
+++ b/war/.htaccess
@@ -1,6 +1,4 @@
 <IfModule mod_expires.c>
 ExpiresActive On
-ExpiresDefault "access plus 1 day"
-ExpiresByType text/html "access plus 2 years"
-ExpiresByType image/png "access plus 2 years"
+ExpiresDefault "access plus 3 months"
 </IfModule>
