Remove CVS tag from build.properties

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-# $Id$
+# Build Properties
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
 
@@ -10,10 +10,10 @@ dir.build = build
 gwt.style = OBFUSCATED
 
 # FTP access for deployment
-ftp.user = civbuddy.org
-ftp.pwd = (orgSecLrg)
+ftp.user = username
+ftp.pwd = password
 ftp.dir = /civbuddy.org/app
-ftp.server = ftp.strato.com
+ftp.server = ftp.host.name.org
 
 # Version information
 # must be in resources to have the build number available to the application
