--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ gems:
   - jemoji
 
 # website address
-url: http://www.civbuddy.org/
+url: http://civbuddy.org
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
