--- a/src/main/resources/com/tj/civ/client/resources/CbBuildNumberIF.properties
+++ b/src/main/resources/com/tj/civ/client/resources/CbBuildNumberIF.properties
@@ -1,6 +1,5 @@
-# $Id$
-# CivBuddy build number, maintained by ant
+# CivBuddy build number, maintained by Gradle
 # Author: Thomas Jensen
 # Creation Date: 2011-05-22
-# Last modified: Sat, 03 Nov 2012 15:12:14 +0100
-build.number=80
+#Fri Oct 16 18:27:12 CEST 2015
+build.number=4
